2001-08-30  Seth Robertson  <seth@yeah.baka.org>

	* test/test_stringconv.c: Test program now operational.  atoish
	functions tested.  Hash function tested.  String tokenization
	tested.  Debugging tested.  Config tested.

	* lib/b_config.c (config_manage): Make work
	(load_config_from_file): Fgets is the correct function...
	(bck_create): DLL must be unordered if no cmp funs

	* lib/b_stdfun.c: Create standard helper functions

	* include/libbk.h (BK_ENV_GWD): Fix definition

	* lib/b_general.c (bk_general_debug_config): Single function to
	configure debugging.

	* lib/b_fun.c (bk_fun_reset_debug): New function to reset debug
	levels of all entered functions.

2001-08-29  Seth Robertson  <seth@yeah.baka.org>

	* test/test_stringconv.c: Fill out string test program.

	* lib/b_string.c (bk_string_rip): Add rip to terminate strings on bad chars

2001-08-26  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_string.c (bk_string_printbuf): Fix binary output function.

	* include/libbk.h: BK_GENERAL_* macros to check for B allocation
	before dereference.

	* lib/b_string.c (bk_string_tokenize_split): Finished tokenization code.

	* lib/b_memx.c: Dynamic array extension code

2001-08-19  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_string.c: Filling out string functions

	* lib/b_error.c (be_error_output): Convert to using bk_general_syslog

	* lib/b_debug.c (bk_debug_iprint): Convert to using bk_general_syslog

	* lib/*.c: CLC #defines had _uniq screwed up
	
	* lib/b_funlist.c: Fill out funlist functions

	* lib/b_general.c: New funlist APIs.

2001-08-16  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_fun.c (bk_fun_destroy): Convert to DICT_NUKE_CONTENTS
	* lib/b_debug.c (bk_debug_destroy): Convert to DICT_NUKE_CONTENTS
	
	* lib/b_error.c: Write error functions

	* lib/b_debug.c: error functions will have incorrect function name
	listed.

	* lib/b_config.c (kv_key_hash): Switch to new strhash API.

	* lib/b_debug.c: Fill out debug function.
