@@ -1,3 +1,4 @@
 .depend
 test_printbuf
 test_stringconv
+test_errorstuff
